--- a/AdaptiveWpfLayout/MainWindow.xaml
+++ b/AdaptiveWpfLayout/MainWindow.xaml
@@ -7,6 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Name="NavigationColumn" MinWidth="200" Width="*"/>
+            <ColumnDefinition Name="DetailColumn" Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <ListBox >
+            
+        </ListBox>
     </Grid>
 </Window>
