--- a/AdaptiveWpfLayout/MainWindow.xaml
+++ b/AdaptiveWpfLayout/MainWindow.xaml
@@ -6,12 +6,15 @@
         xmlns:local="clr-namespace:AdaptiveWpfLayout"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <d:Window.DataContext>
+        <local:MainWindowViewModel/>
+    </d:Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Name="NavigationColumn" MinWidth="200" Width="*"/>
             <ColumnDefinition Name="DetailColumn" Width="2*"/>
         </Grid.ColumnDefinitions>
-        <ListBox >
+        <ListBox DataContext="Items">
             
         </ListBox>
     </Grid>
