--- a/AdaptiveWpfLayout/DetailUC.xaml
+++ b/AdaptiveWpfLayout/DetailUC.xaml
@@ -8,6 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <BitmapImage x:Key="FaceImageSource" UriSource="Face.png" />
+        <local:IsLessThanConverter x:Key="IsLessThanConverter"/>
     </UserControl.Resources>
     <d:UserControl.DataContext>
         <local:DemoPerson/>
@@ -22,10 +23,10 @@
         </StackPanel.Resources>
 
         <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-            <Grid>
+            <Grid Name="CentralLayoutGrid">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Name="Column0" Width="*"/>
+                    <ColumnDefinition Name="Column1" Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -36,8 +37,9 @@
                 </Grid.RowDefinitions>
                 <TextBlock FontSize="24">Personal information</TextBlock>
                 <WrapPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal"
-                           Grid.ColumnSpan="2" 
-                           MaxWidth="{Binding ActualWidth, ElementName=TopLevelContainer}">
+                           Grid.ColumnSpan="2" Name="FieldsPanel"
+                           MaxWidth="{Binding ActualWidth, ElementName=TopLevelContainer}"
+                           HorizontalAlignment="Left">
                     <Image Source="{StaticResource FaceImageSource}" Width="48"/>
                     <TextBlock Text="{Binding DisplayName}" />
                     <TextBlock Text="{Binding Id}" />
@@ -54,9 +56,16 @@
                 </WrapPanel>
                 <DataGrid Grid.Column="0" Grid.Row="2" 
                     ItemsSource="{Binding Plans}"
-                    IsReadOnly="True" CanUserReorderColumns="False" GridLinesVisibility="None" SelectionMode="Single">
-                    
-                </DataGrid>
+                    IsReadOnly="True" CanUserReorderColumns="False" 
+                    GridLinesVisibility="None" SelectionMode="Single"
+                    VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
+                    Margin="10" Name="PlansGrid"/>
+                <DataGrid Grid.Column="2" Grid.Row="2" 
+                    ItemsSource="{Binding Files}"
+                    IsReadOnly="True" CanUserReorderColumns="False" 
+                    GridLinesVisibility="None" SelectionMode="Single"
+                    VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
+                    Margin="10" Name="FilesGrid"/>
             </Grid>
         </ScrollViewer>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
