--- a/AdaptiveWpfLayout/DetailUC.xaml
+++ b/AdaptiveWpfLayout/DetailUC.xaml
@@ -58,12 +58,14 @@
                     <TextBlock Text="{Binding Email}"/>
                 </WrapPanel>
                 <DataGrid Grid.Column="0" Grid.Row="2" 
+                          Height="180"
                     ItemsSource="{Binding Plans}"
                     IsReadOnly="True" CanUserReorderColumns="False" 
                     GridLinesVisibility="None" SelectionMode="Single"
                     VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
                     Margin="10" Name="PlansGrid" AutoGeneratingColumn="Grid_AutoGeneratingColumn_HideInDesign"/>
                 <DataGrid Grid.Column="2" Grid.Row="2" 
+                          Height="180"
                     ItemsSource="{Binding Files}"
                     IsReadOnly="True" CanUserReorderColumns="False" 
                     GridLinesVisibility="None" SelectionMode="Single"
